<resources>
    <string name="app_name">Wherever I go</string>
    <string name="app_logo">Sua viagem do seu jeito</string>

    <!--Tela Login-->
    <string name="img_descricao">App Icon</string>

    <string name="home_edt_email">E-mail</string>
    <string name="home_edt_senha">Senha</string>
    <string name="home_btn_login">Login</string>
    <string name="home_txt_cadastro">Não tem cadastro? Clique aqui!</string>
    <string name="home_img_logo_content_description">Logo do aplicativo</string>

    <!--erros-->
    <string name="campo_vazio">Campo obrigatório!</string>
    <string name="email_invalido">E-mail inválido!</string>
    <string name="campo_invalido">Campo Inválido!</string>
    <string name="login_invalido">Login inválido!</string>
    <string name="login_incorreto">E-mail/Senha incorreto(s)!</string>
    <string name="login_erro">Erro ao logar. Por favor, tente novamente!</string>
    <string name="server_erro">Falha na conexão com o servidor!</string>

    <!--Tela Cadastro de usuario-->
    <string name="home_text">Cadastre-se para melhor experiência.</string> <!--verificar se a frase está boa!-->
    <string name="home_edt_nome">Nome e Sobrenome</string>
    <string name="home_edt_cadastroEmail">E-mail</string>
    <string name="home_edt_cadastroSenha">Senha</string>
    <string name="home_edt_repetirCadastroSenha">Repetir senha</string>
    <string name="data_nascimento">Data de Nascimento</string>
    <string name="home_text1">Sexo</string>
    <string name="radBtMasculino">Masculino</string>
    <string name="radBtFeminino">Feminino</string>
    <string name="home_btn_cadastrar">Cadastrar</string>
    <string name="campo_obrigatorio">Campo Obrigatório</string>
    <string name="campo_data_nascimento">Informe a data de nascimento</string>
    <string name="campo_senha_diferentes">Senhas são diferentes</string>
    <string name="campo_genero">Escolha um genero</string>
    <string name="senha_curta">Sua senha deve ter mais de 4 caracteres!</string>
    <string name="cadastro_senhas_diferentes">Senhas diferentes</string>
    <string name="cadastro_sucess">Cadastro realizado!</string>
    <string name="email_duplicado">E-mail já cadastrado!</string>
    <string name="cadastro_erro">Erro no cadastro</string>

    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <!--Tela Locais Sugeridos-->
    <string name="locais_txt_mensagem">Sem ideias? Veja algumas dicas de destino!</string>
    <string name="logout">Logout</string>

    <!--Tela Questionário-->
    <string name="questionario_txt_mensagem">Marque o que mais te indentifica</string>
    <string name="questionario_btn_prox">Próximo</string>
    <string name="questionario_btn_terminar">Terminar</string>

    <!--Tela Avaliação de Locais -->
    <string name="intro">Avalie as cidades abaixo \n (mesmo que não conheça pessoalmente)</string>
    <string name="erro_conexao">Erro na conexão</string>
    <string name="erro_failure_metodo">Desculpe, algum erro inesperado aconteceu, tente reiniciar a aplicação</string>

    <!--Navigation drawer -->
    <string name="questionario">Questionário</string>

    <!-- para sublinhar:   <u></u>  -->
</resources>
