<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:background="@color/colorLogoBackground">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLogoBackground"
        android:weightSum="1"
        >

        <ImageView
            android:id="@+id/appIcon"
            android:contentDescription="@string/img_descricao"
            android:layout_width="match_parent"
            android:layout_height="218dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="12dp"
            android:layout_gravity="center"
            android:src="@drawable/logomarca"
            android:layout_weight="0.18"
            />

        <EditText
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:inputType="textEmailAddress"
            android:hint="@string/home_edt_email"
            android:textColor="@color/colorLogoGreen"
            android:textColorHint="@color/colorWhite"
            />

        <EditText
            android:id="@+id/userSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:inputType="textPassword"
            android:hint="@string/home_edt_senha"
            android:textColor="@color/colorLogoGreen"
            android:textColorHint="@color/colorWhite"/>

        <Button
            android:id="@+id/btn_login"
            android:text="@string/home_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_gravity="center"
            android:layout_marginTop="55dp"
            android:onClick="logar"
            />

        <Button
            android:id="@+id/btn_cadastro"
            android:text="@string/home_txt_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/darker_gray"
            android:background="@android:color/transparent"
            android:elegantTextHeight="false"
            android:focusable="false"
            android:layout_marginTop="90dp"
            android:layout_gravity="center"
            android:onClick="cadastrar"/>

    </LinearLayout>

</ScrollView>