<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.bernardojr.whereverigo.HomeActivity">

        <ImageView
            android:id="@+id/home_img_logo"
            android:layout_width="136dp"
            android:layout_height="118dp"
            app:srcCompat="@android:drawable/ic_menu_gallery"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            android:contentDescription="@string/home_img_logo_content_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_edt_email"
            android:layout_marginBottom="-1dp"
            app:layout_constraintBottom_toTopOf="@+id/home_edt_email"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/home_edt_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="66dp"
            app:layout_constraintTop_toBottomOf="@+id/home_img_logo"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/txt_email" />

        <TextView
            android:id="@+id/txt_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_edt_senha"
            android:layout_marginBottom="0dp"
            app:layout_constraintBottom_toTopOf="@+id/home_edt_senha"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/home_edt_senha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/home_edt_email"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/txt_senha" />

        <Button
            android:id="@+id/home_btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_btn_login"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/home_edt_senha"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="@+id/home_edt_senha" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:hint="@string/home_txt_cadastro"
            app:layout_constraintRight_toLeftOf="@+id/home_btn_login"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/home_btn_login"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="@+id/home_btn_login"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/home_edt_senha" />





    </android.support.constraint.ConstraintLayout>
</ScrollView>
